<resources>
    <string name="app_name">inspire</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">app_id_here</string>
    <string name="back4app_client_key">client_key_here</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="email_hint">Email</string>
    <string name="or_login_button_text">or, Login In!</string>
    <string name="or_register_button_text">or, Register</string>
    <string name="error_field_required">Fields cannot be empty</string>
    <string name="error_invalid_email">Invalid Email address</string>
    <string name="error_invalid_password">Password must be of minimum 8 character</string>
    <string name="error_invalid_username">Username cannot contain special symbols, must contain atleast 3 characters, numbers must
                                            present after 3 characters</string>
    <string name="enter_bookname_hint">Enter Book Title</string>
    <string name="enter_bookdesc_hint">Enter Author/Desc</string>
    <string name="submit_details">Submit Details</string>
    <string name="enter_bookprice_hint">Enter Book Price</string>
    <string name="logout_title">Logout</string>
    <string name="btn_request">Request</string>
    <string name="title_activity_central">CentralActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Requests</string>
    <string name="tab_text_3">Old Books</string>
    <string name="textView">TextView</string>
    <string name="action_logout">Logout</string>
    <string name="edit_old_book_name">Write here Book name...</string>
    <string name="edit_old_book_desc">Write here Book Author</string>
    <string name="btn_choose_image">Select Image</string>
    <string name="txt_file_path">File path...</string>
    <string name="btn_upload">Upload..</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_crop">Crop</string>
    <string name="edt_your_name">Enter Your Name</string>
    <string name="btn_get">Get</string>
    <string name="payment_activity_text">Payment Activity</string>
    <string name="inspire_logo">app logo</string>
    <string name="phone_hint">Phone no.</string>
    <string name="phoneno_hint">Phone number</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="error_invalid_phone_length">Incorrect phone number length</string>
    <string name="repassword_hint">Re-enter Password</string>
    <string name="error_password_identical">Password doesn\'t match</string>
    <string name="my_requests">My Requests</string>
</resources>
